# serverless-mcp-proto

./: .gitignore  Cargo.toml  README.md  package-lock.json
infrastructure/: deploy.sh  dynamodb.yaml  main.yaml  roles.yaml
mcp-client/: servers.json
mcp-proxy/: app.ts  eslint.config.ts  package-lock.json  package.json  tsconfig.json
mcp-proxy/public/: index.html
mcp-proxy/src/: mcp-client.ts  prompt-store.ts  types.d.ts
mcp-server/: Dockerfile
results/: QueryExamples.txt  gpt-oss-result1.txt  prompts.md  qwen3-result1.txt  qwen3-result2.txt
rust-serverless/: deploy.sh  docker-compose.yaml  test.sh
rust-serverless/GetScopedData/: Cargo.toml  samconfig.toml
rust-serverless/GetScopedData/src/: main.rs
rust-serverless/ScheduledDataUpdate/: Cargo.toml
rust-serverless/ScheduledDataUpdate/src/: main.rs
rust-serverless/db-utils/src/: lib.rs
server/: docker-compose.yaml  requirements.txt  test.sh
server/GetScopedData/: Dockerfile  template.yaml
server/ScheduledDataUpdate/: samconfig.toml  template.yaml
server/db-utils/: Cargo.toml
server/db-utils/src/: lib.rs
server/local-table/: Dockerfile
