[package]
name = "ScheduledDataUpdate"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
aws-config = "1.8.10"
aws-sdk-dynamodb = "1.98.0"
aws_lambda_events = { version = "0.18.0", default-features = false, features = ["eventbridge"] }
chrono = "0.4.42"

lambda_http = "0.17.0"
lambda_runtime = "0.14.4"
serde = "1.0.228"
serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+1"] }
tokio = { version = "1", features = ["macros"] }
db-utils = { version = "0.1.0", path = "../db-utils" }
reqwest = "0.12.24"
serde_json = "1.0.145"
